--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,42 @@
-anyio==3.5.0
-asgiref==3.5.0
-click==8.0.3
-fastapi==0.73.0
-greenlet==1.1.2
-h11==0.13.0
-httptools==0.3.0
-idna==3.3
-pydantic==1.9.0
-python-dotenv==0.19.2
-PyYAML==6.0
-sniffio==1.2.0
-SQLAlchemy==1.4.31
-sqlalchemy2-stubs==0.0.2a19
-sqlmodel==0.0.6
-starlette==0.17.1
-typing_extensions==4.0.1
-uvicorn==0.17.4
-uvloop==0.16.0
-watchgod==0.7
-websockets==10.1
+Package            Version
+------------------ ---------
+anyio              3.5.0
+asgiref            3.5.0
+attrs              21.4.0
+certifi            2021.10.8
+charset-normalizer 2.0.11
+click              8.0.3
+coverage           6.3.1
+fastapi            0.73.0
+freezegun          1.1.0
+greenlet           1.1.2
+h11                0.13.0
+httptools          0.3.0
+idna               3.3
+iniconfig          1.1.1
+packaging          21.3
+pip                21.2.4
+pluggy             1.0.0
+py                 1.11.0
+pydantic           1.9.0
+pyparsing          3.0.7
+pytest             7.0.0
+pytest-cov         3.0.0
+python-dateutil    2.8.2
+python-dotenv      0.19.2
+PyYAML             6.0
+requests           2.27.1
+setuptools         58.1.0
+six                1.16.0
+sniffio            1.2.0
+SQLAlchemy         1.4.31
+sqlalchemy2-stubs  0.0.2a19
+sqlmodel           0.0.6
+starlette          0.17.1
+tomli              2.0.1
+typing_extensions  4.0.1
+urllib3            1.26.8
+uvicorn            0.17.4
+uvloop             0.16.0
+watchgod           0.7
+websockets         10.1
